[[changelog]]
== Changelog

== Release 0.10.6

=== Gradle plugin

- Added options to override parameters from command line

== Release 0.10.5

- Add missing getters to `DirectoryConfiguration`
- Refactor Native Build Tools documentation and add end-to-end guides for both Gradle and Maven plugins
- Restyle Native Build Tools documentation
- Improve GraalVM version check
- Upgrade the use of Jackson to plain old JSONObject

==== Gradle plugin

- Fix sporadic failures with: access-filter.json already exists

==== Maven plugin

- Add maven functional testing in github actions
- Fix Broken Maven Functional Tests when Using New Metadata Format
- Fix SBOM integration test bug
- Make metadataCopy task work with custom disabled stages

=== Release 0.10.4

- Improve Native Image SBOM Generation
- Make accessFilter file registration thread safe
- Fix broken links in the projects documentation

=== Release 0.10.3

- Remove usage of macro from merger tool initialization and throw better error if executable does not exist
- Add support for the new reachability-metadata.json config file
- Remove custom post-processing task for filtering config files entries and use access-filter.json instead

==== Gradle plugin

- Add retries when downloading the metadata repository when using a URL directly

==== Maven plugin

- Add retries when downloading the metadata repository when using a URL directly


=== Release 0.10.2

- Fix class path directory analyzer
- Update Reachability Metadata repository version

==== Gradle plugin

- Update Default Target Directory for MetadataCopy Task

==== Maven plugin

- Update Getting Started with Maven Plugin doc
- Delete old stale args file
- Add a parameter to be able to skip build native for pom type modules, leave it as false per default for backward compat

=== Release 0.10.1

- Mark additional JUnit 5 types for build-time initialization for compatibility with Native Image's `--strict-image-heap` option.


=== Release 0.10.0
